Figured out "inner" padding issue
Padding was too much causing to the logo to be bigger than I wanted. Found that the padding was being altered ni the "XL, L, M, S, XS" Adjustments and needed to be modified

--- a/By the cook/assets/css/main.css
+++ b/By the cook/assets/css/main.css
@@ -2601,15 +2601,15 @@ input, select, textarea {
 		/*background-image: url("images/overlay.png"), url("../../images/fire.png");*/
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
-		background-size: auto,								150%;
+		background-size: auto,								100%;
 		color: rgb(255, 255, 255);
 		height: 100%;
 		left: 0;
 		padding: 8em 4em;
 		position: fixed;
-		text-align: right;
+		text-align: center;
 		top: 0;
-		width: 35%;
+		width: 15%;
 	}
 
 		#header > * {
@@ -2625,8 +2625,8 @@ input, select, textarea {
 			-webkit-flex-grow: 1;
 			-ms-flex-grow: 1;
 			flex-grow: 1;
-			margin: 0 0 2em 0;
-			
+			margin: 0 0 0 0;
+			text-align: left;
 		}
 
 		#header strong, #header b {
@@ -2645,8 +2645,9 @@ input, select, textarea {
 		}
 
 		#header .image.avatar {
-			margin: 0 0 1em 0;
-			width: 6.25em;
+			margin: 0 0 0 0;
+			
+			width: 100%
 		}
 
 /* Footer */
@@ -2663,7 +2664,7 @@ input, select, textarea {
 		color: rgba(255, 255, 255, 0.4);
 		font-size: 0.8em;
 		list-style: none;
-		margin: 1em 0 0 0;
+		margin: 0 0 0 0;
 		padding: 0;
 	}
 
@@ -3003,7 +3004,7 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				padding: 6em 3em 3em 3em;
+				padding: 4em 2em 2em 2em;
 				width: 15%;
 			}
 
@@ -3064,7 +3065,7 @@ input, select, textarea {
 				background-position: top left, center center;
 				background-size: auto,		cover;
 				left: auto;
-				padding: 6em 4em;
+				padding: 0;
 				position: relative;
 				text-align: center;
 				top: auto;
@@ -3091,7 +3092,7 @@ input, select, textarea {
 				background-size: auto,							cover;
 				bottom: auto;
 				left: auto;
-				padding: 4em 4em 6em 4em;
+				padding: 0;
 				position: relative;
 				text-align: center;
 				width: 100%;
